# PX_open

./: .gitignore  CMakeLists.txt  README.md  camera_manager.py  commands.txt  config.py  onvif_module.py  onvif_scan.py  project_structure.txt  vms_frigate_server.py  vms_frigate_server2.py
Client/resources/qml/: FullscreenCamera.qml
Client/src/ui/: FrameItem.h
PX Open Client/: README.md  resources.qrc
PX Open Client/assets/icons/: server.b61
PX Open Client/resources/qml/: EventList.qml  FullscreenTimeline.qml  SettingsPage.qml  TestIcons.qml
PX Open Client/resources/qml/components/: Timeline.qml
PX Open Client/resources/qml/components/controllers/: CameraController.qml
PX Open Client/resources/qml/components/timeline/: TimelineEvents.qml
PX Open Client/src/backend/: CameraVideoItem.h  D3D11Renderer.cpp
PX Open Client/src/backend/frigate/: FrigateCameraManager.cpp  FrigateOnvif.h
PX Open Client/src/ui/: FrameItem.cpp
Releases/: Frigate_Setup_Guide.md
Server Module/Frigate/: PX_Frigate_Server.spec  frigate_server.py  frigate_server.spec
client/: CMakeLists.txt  resources.qrc
client/resources/qml/: EventPlayback.qml  MainWindow.qml  StartupPage.qml  TopBar.qml  serverSettings.qml
client/resources/qml/components/: AddCameraPopup.qml  CameraGrid.qml  CameraTile.qml  CameraTileOverlay.qml  ServerItem.qml
client/resources/qml/components/timeline/: TimelineSegments.qml
client/src/: WindowActivator.h  main.cpp
client/src/backend/: CameraVideoRenderer.cpp  D3D11Renderer.h  DiscoveryListener.cpp  DiscoveryListener.h  FFmpegWorker.cpp  FrameQueue.cpp
client/src/backend/frigate/: FrigateOnvif.cpp  FrigateTimeline.h
client/src/backend/shaders/: yuv2rgb.hlsl
px_open/: CMakeLists.txt  README.md  resources.qrc
px_open/Client/resources/qml/: camerasSettings.qml
px_open/Client/resources/qml/components/: RestartPopup.qml
px_open/Client/resources/qml/components/popups/: AddCameraPopup.qml  EditCameraPopup.qml
px_open/Client/resources/qml/components/timeline/: TimelineRuler.qml
px_open/Client/resources/qml/fullscreen/: FullscreenTimeline.qml
px_open/Client/src/backend/: DiscoveryListener.cpp  FFmpegWorker.h
px_open/Client/src/backend/frigate/: FrigateAPI.h
px_open/Client/src/network/: DiscoveryListener.cpp
px_open/resources/: style.qss
px_open/resources/html/: mp4player.html
px_open/resources/qml/: FullscreenCamera.qml  FullscreenTimeline.qml  MainWindow.qml  ManualAddDialog.qml  Sidebar.qml  StartupPage.qml  TopBar.qml  aboutSettings.qml  generalSettings.qml
px_open/resources/qml/components/: AddCameraPopup.qml  CameraGrid.qml  CameraTile.qml  CameraTileOverlay.qml  CameraView.qml  EditCameraPopup.qml  FullscreenToolbar.qml  IconButton.qml  OnvifDiscoveryPopup.qml  Panel.qml  RemoveCameraPopup.qml  ServerView.qml  Timeline.qml
px_open/resources/qml/components/controllers/: RestartController.qml
px_open/resources/qml/components/popups/: RemoveCameraPopup.qml
px_open/resources/qml/components/timeline/: TimelineAutoHide.qml  TimelineHoverPreview.qml  TimelineMouseHandler.qml  TimelineScrubber.qml
px_open/resources/qml/components/views/: ServerView.qml
px_open/resources/qml/fullscreen/: FullscreenCamera.qml
px_open/src/: main.cpp  qml_dummy.cpp  qml_dummy.h
px_open/src/backend/: CameraVideoItem.cpp  CameraVideoRenderer.h  DiscoveryListener.cpp  DiscoveryListener.h  FFmpegWorker.cpp  FFmpegWorker.h  FrameQueue.cpp  FrameQueue.h  FrigateAPI.cpp  FrigateAPI.h  FrigateWorker.cpp  FrigateWorker.h  PlaybackFFmpegWorker.cpp  PlaybackFFmpegWorker.h  hardware.cpp
px_open/src/backend/frigate/: FrigateAPI.cpp  FrigateAPI.h  FrigateCameraManager.cpp  FrigateCameraManager.h  FrigatePlayback.cpp  FrigatePlayback.h  FrigateStreamManager.cpp  FrigateStreamManager.h  FrigateTimeline.cpp
px_open/src/network/: DiscoveryListener.h
server_module/Frigate/: config.py  https_server.py
